# synthahol-dx7

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
src/: algorithms.rs  envelope.rs  format.rs  lib.rs  read.rs
tests/: README.md
