# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "synthahol-dx7"
version = "0.1.1"
edition = "2021"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
description = "Read presets for the Yamaha DX7 synthesizer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/softdevca/synthahol-dx7"
repository = "https://github.com/softdevca/synthahol-dx7"
keywords = ["audio", "synth", "patch", "preset", "dx7"]
publish = true

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
approx = "0.5"
